<resources>
    <string name="app_name">PlaylistMarker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="back">Назад</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="button_share_application_text">https://practicum.yandex.ru/android-developer</string>
    <string name="support_mail">Evlenium@yandex.ru</string>
    <string name="support_subject">«Сообщение разработчикам и разработчицам приложения Playlist Maker»</string>
    <string name="support_body">«Спасибо разработчикам и разработчицам за крутое приложение!»</string>
    <string name="yandex_practicum_offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_internet_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="length">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="fixed_time_track">00:00</string>
    <string name="to">to</string>
    <string name="subject">subject</string>
    <string name="body">body</string>
    <string name="new_dimension_image">512x512bb.jpg</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="media_library_empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="added_to_playlist_yet">Трек уже добавлен в плейлист</string>
    <plurals name="plurals_track">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="plurals_track_length">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_tracks_in_the_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="empty_track_list">В этом плейлисте нет треков</string>
    <string name="do_you_want_delete_track">Хотите удалить трек?</string>
    <string name="do_you_want_delete_playlist">Хотите удалить плейлист «%1$s»?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="zero_minute">0 минут</string>
    <string name="edit_playlist">Редактировать плейлист</string>
</resources>