<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_settings_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/buttonBackToMainFromSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/background_settings_color"
            android:contentDescription="@string/back"
            android:padding="12dp"
            android:src="@drawable/arrow_back_mode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textColor="?attr/title_settings_color"
            android:textFontWeight="500"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp">
        <TextView
            style="@style/TextMenuSettings"
            android:text="@string/black_theme" />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="10dp"
            android:paddingVertical="11dp"
            android:paddingStart="9dp"
            android:paddingEnd="12dp"
            app:thumbTint="?attr/switcher_settings_color"
            app:trackTint="?attr/switcher_settings_color_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextMenuSettings"
            android:layout_marginVertical="19dp"
            android:text="@string/share_app" />

        <ImageButton
            style="@style/IconMenuSettings"
            android:id="@+id/buttonShareApplication"
            android:src="@drawable/send_mode" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextMenuSettings"
            android:layout_marginVertical="19dp"
            android:text="@string/write_to_support" />

        <ImageButton
            style="@style/IconMenuSettings"
            android:id="@+id/buttonSupport"
            android:src="@drawable/support_mode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextMenuSettings"
            android:layout_marginVertical="19dp"
            android:text="@string/terms_of_use" />

        <ImageButton
            style="@style/IconMenuSettings"
            android:id="@+id/buttonTermsOfUse"
            android:src="@drawable/move_mode" />
    </LinearLayout>
</LinearLayout>