<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_settings_color"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSettings"
        style="@style/BackToolbarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp">

        <TextView
            style="@style/TextMenuSettings"
            android:text="@string/black_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            app:thumbTint="?attr/switcher_settings_color"
            app:trackTint="?attr/switcher_settings_color_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextMenuSettings"
            android:layout_marginVertical="19dp"
            android:text="@string/share_app" />

        <ImageButton
            android:id="@+id/buttonShareApplication"
            style="@style/IconMenuSettings"
            android:src="@drawable/bt_send_mode" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextMenuSettings"
            android:layout_marginVertical="19dp"
            android:text="@string/write_to_support" />

        <ImageButton
            android:id="@+id/buttonSupport"
            style="@style/IconMenuSettings"
            android:src="@drawable/bt_support_mode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextMenuSettings"
            android:layout_marginVertical="19dp"
            android:text="@string/terms_of_use" />

        <ImageButton
            android:id="@+id/buttonTermsOfUse"
            style="@style/IconMenuSettings"
            android:src="@drawable/move_mode" />
    </LinearLayout>
</LinearLayout>