<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YPblue"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:padding="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="62dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/YPblue"
                android:text="@string/app_name"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/YPwhite"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/ButtonMainMenuStyle"
        android:id="@+id/search"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/search"
        app:cornerRadius="16dp"
        app:icon="@drawable/search_mode"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/YPblack" />

    <Button
        style="@style/ButtonMainMenuStyle"
        android:id="@+id/mediaLibrary"
        android:layout_marginVertical="4dp"
        android:text="@string/media"
        app:cornerRadius="16dp"
        app:icon="@drawable/light_mode"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/YPblack" />

    <Button
        style="@style/ButtonMainMenuStyle"
        android:id="@+id/settings"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:cornerRadius="16dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/YPblack" />
</LinearLayout>